# remy

./: .gitignore  Dockerfile  LICENSE  README.md  dev-docker-compose.yml  docker-compose.yml  project.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: copilot-instructions.md
docs/: api_specification.md  mcp_specification.md  query_language_guide.md  remy_config.md  web_interface_setup.md
docs/design/: overview.md  query_language.md
docs/examples/: config.py  remy_config.py  sample_cache_layout.md
issues/: issue-creator.md
scripts/: add_spotted  new_notecard  vnote
src/remy/: __init__.py  exceptions.py  grammar.py  groupby.py  notecard.py  notecard_cache.py  notecard_index.py  parsers.py  url.py  util.py
src/remy.egg-info/: PKG-INFO  SOURCES.txt
src/remy/api/: __init__.py  __main__.py  app.py
tests/: test_api.py  test_cli.py  test_cli_index.py  test_cli_macro.py  test_complete.py  test_config_macros.py  test_config_macros_integration.py  test_mcp.py  test_notecard.py  test_notecard_cache.py  test_parsers.py  test_query.py  test_query_bare_identifiers.py  test_query_embedded_arithmetic.py  test_query_eval.py  test_query_macros.py  test_query_set_operators.py  test_query_temporal.py  test_query_timedelta.py  test_query_type_mismatch.py  test_url.py  test_util.py
vim/ftdetect/: remy.vim
vim/remy/: remy.vim
vim/syntax/: remy.vim
vite/: Dockerfile  dev-docker-compose.yml  docker-compose.yml  package.json  tar_snapshot.sh  vite_build.sh  vite_serve.sh
vite/vite/: package-lock.json  package.json  vite.config.ts
(+34 files in other folders)
